--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/router": "^17.3.2",
         "@ionic/angular": "^8.3.0",
         "@ng-bootstrap/ng-bootstrap": "^17.0.1",
+        "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
         "firebase": "^10.13.1",
         "jquery": "^3.7.1",
